--- a/man/bak.1
+++ b/man/bak.1
@@ -1,6 +1,6 @@
-.TH BAK "1" "July 2021" "bak 0.1.1" "User Commands"
+.TH BAK "1" "July 2021" "bak unreleased" "User Commands"
 .SH NAME
-bak \- manual page for bak 0.1.1
+bak \- manual page for bak unreleased
 .SH DESCRIPTION
 .IP
 USAGE: bak [options] <files/dirs to backup>...
